--- a/orrangev2/package.json
+++ b/orrangev2/package.json
@@ -51,6 +51,7 @@
     "lucide-react": "^0.454.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
+    "permissionless": "^0.2.57",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
@@ -61,6 +62,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
+    "viem": "^2.44.1",
     "zod": "3.25.76"
   },
   "devDependencies": {
